# WalnutsDetect

./: README.md  build.gradle  desktop.ini  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/app/walnutsdetect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/app/walnutsdetect/: GameView.java  MainActivity.java
app/src/main/res/anim/: move_left_in.xml  move_right_out.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/app/walnutsdetect/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary24135/src/main/java/org/opencv/photo/: Photo.java
opencv_model_lib/: CMakeLists.txt  build.gradle
opencv_model_lib/src/androidTest/java/com/cv_lib/opencv_model_lib/: ExampleInstrumentedTest.java
opencv_model_lib/src/main/: AndroidManifest.xml
opencv_model_lib/src/main/cpp/: DealImage.cpp  DealImage.h  native-lib.cpp
opencv_model_lib/src/main/java/JavaNavtive/: Config.java
opencv_model_lib/src/main/java/camera/: OpencvCameraActivity.java
opencv_model_lib/src/main/java/photo/: GameView.java  GuideActivity.java  LoadingDialog.java  MYViewPagerAdapter.java  MyDataBaseHelper.java  OpencvPhotoActivity.java  Person.java  firststart.java  test.java
opencv_model_lib/src/main/res/anim/: move_left_in.xml  move_right_out.xml  popup_in.xml  popup_out.xml
opencv_model_lib/src/main/res/drawable/: btn_bg_red.xml  btn_bg_red1.xml  button_select1.xml  button_select2.xml  buttonstyle.xml  dialog_loading.xml  feng.xml  t.xml
opencv_model_lib/src/main/res/layout/: activity_guide.xml  activity_opencv_camera.xml  activity_opencv_photo.xml  dialog_loading.xml  dialoglayout.xml  dialoglayout1.xml  dialoglayout2.xml  firstac.xml  firststart1.xml  guidance03.xml  popuplayout.xml
opencv_model_lib/src/main/res/menu/: info.xml
opencv_model_lib/src/main/res/values/: strings.xml  styles.xml
opencv_model_lib/src/main/sdk/java/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  index-all.html  overview-tree.html
opencv_model_lib/src/main/sdk/java/javadoc/org/opencv/photo/: Photo.html  package-frame.html  package-summary.html  package-tree.html
